change window title in wallet observer

--- a/Backoffice/Components/Monitor/WalletObserverComponent.razor
+++ b/Backoffice/Components/Monitor/WalletObserverComponent.razor
@@ -57,7 +57,7 @@
 {
     <div>
         <BaseTwoButtonsDialog
-            Caption="Market Trade"
+            Caption="Add new wallet"
             OnClose="@OnCloseAddWalletWindow"
             YesButtonCaption="Execute"
             NoButtonCaption="Cancel"
@@ -92,7 +92,7 @@
 {
     <div>
         <BaseTwoButtonsDialog
-            Caption="Market Trade"
+            Caption="Remove wallet"
             OnClose="@OnCloseRemoveWalletWindow"
             YesButtonCaption="Execute"
             NoButtonCaption="Cancel"
@@ -120,7 +120,7 @@
 {
     <div>
         <BaseTwoButtonsDialog
-            Caption="Market Trade"
+            Caption="Change limit"
             OnClose="@OnCloseChangeMinBalanceWindow"
             YesButtonCaption="Execute"
             NoButtonCaption="Cancel"
