--- a/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
+++ b/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
@@ -40,6 +40,7 @@
         <th>LastError</th>
         <th>RetriesCount</th>
         <th>EventDate</th>
+        <th>Workflow state</th>
         <th/>
     </tr>
     </thead>
