--- a/Backoffice/Pages/LiquidityEngine.razor
+++ b/Backoffice/Pages/LiquidityEngine.razor
@@ -1,6 +1,5 @@
 ﻿@page "/LiquidityEngine"
 
-@using Backoffice.Components.Liquidity.ExternalMarkets
 @using Backoffice.Components.Liquidity.AssetPortfolio
 
 
@@ -13,52 +12,20 @@
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.Wallets)" @onclick="SetWallets" >Wallets</button>
     </li>
-    <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.ExternalMarkets)" @onclick="SetExternalMarkets" >ExternalMarkets</button>
-    </li>
-        <li class="nav-item" style="margin: 10px">
-            <button class="nav-link @CheckActive(Menus.MarketMaker)" aria-current="page" @onclick="SetMarketMaker" >Engine</button>
-        </li>
-    <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.Portfolio)" aria-current="page" @onclick="SetPortfolio" >Portfolio</button>
-    </li>
-        <li class="nav-item" style="margin: 10px">
-            <button class="nav-link @CheckActive(Menus.Settings)" @onclick="SetSettings" >Settings</button>
-        </li>
-    
 </ul>
 
 <div style="margin: 10px">
-    
-    @if (ActivePage == Menus.MarketMaker)
-    {
-        //<LiquidityEngineComponent/>
-        <LiquidityProviderComponent />
-    }
+
     
     @if (ActivePage == Menus.Wallets)
         {
             <LpWalletsComponent />
         }
 
-    @if (ActivePage == Menus.Portfolio)
-    {
-        <PortfolioComponent/>
-    }
     @if (ActivePage == Menus.AssetPortfolio)
     {
         <AssetPortfolioComponent/>
     }
-    @if (ActivePage == Menus.Settings)
-    {
-        <LiquiditySettingsComponent/>
-    }
-    
-    @if (ActivePage == Menus.ExternalMarkets)
-    {
-        <ExernalMarketComponent />
-    }
-
 </div>
 
 @code {
@@ -71,16 +38,6 @@
             return "active";
 
         return "";
-    }
-
-    private void SetMarketMaker()
-    {
-        SetActive(Menus.MarketMaker);
-    }
-
-    private void SetSettings()
-    {
-        SetActive(Menus.Settings);
     }
 
     private void SetAssetPortfolio()
@@ -97,29 +54,12 @@
     public enum Menus
     {
         None,
-        MarketMaker,
-        Portfolio,
         AssetPortfolio,
-        Settings,
-        Wallets,
-        ExternalMarkets
-    }
-    
-
-    private void SetPortfolio()
-    {
-        ActivePage = Menus.Portfolio;
-        StateHasChanged();
+        Wallets
     }
 
     private void SetWallets()
     {
         SetActive(Menus.Wallets);
     }
-
-    private void SetExternalMarkets()
-    {
-        SetActive(Menus.ExternalMarkets);
-    }
-
 }
