add teg separator to settings

--- a/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialog.razor
+++ b/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialog.razor
@@ -12,6 +12,7 @@
                 <tr><td>Enabled BitGo wallets</td><td class="float-left">@Item.EnabledBitgoWalletIds</td></tr>
                 <tr><td>BitGo coin</td><td class="float-left">@Item.BitgoCoin</td></tr>
                 <tr><td>Min balance</td><td class="float-left">@Item.BitgoCoin</td></tr>
+                <tr><td>Tag Separator</td><td class="float-left">@Item.TagSeparator</td></tr>
             </table>
         </td>
     </tr>
