--- a/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialogEdit.razor
+++ b/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialogEdit.razor
@@ -64,6 +64,12 @@
                             <input type="number" class="form-control" @bind="Item.MinBalance"/>
                         </td>
                     </tr>
+                    <tr>
+                        <td>Tag Separator</td>
+                        <td class="float-left">
+                            <input type="text" class="form-control" @bind="Item.TagSeparator"/>
+                        </td>
+                    </tr>
                 </table>
             </td>
 
