--- a/Backoffice/Components/BitGo/Assets/BitGoAssetTableRow.razor
+++ b/Backoffice/Components/BitGo/Assets/BitGoAssetTableRow.razor
@@ -12,6 +12,7 @@
     <td>@Item.EnabledBitgoWalletIds</td>
     <td>@Item.BitgoCoin</td>
     <td>@Item.MinBalance</td>
+    <td>@Item.TagSeparator</td>
 
     <td>
         <ul class="nav">
