--- a/Backoffice/Components/BitGo/Assets/BitGoAssetListComponent.razor
+++ b/Backoffice/Components/BitGo/Assets/BitGoAssetListComponent.razor
@@ -20,6 +20,7 @@
             <th>Enabled BitGo wallet</th>
             <th>BitGo coin</th>
             <th>Min balance</th>
+            <th>Tag separator</th>
             <th></th>
         </tr>
     </thead>
