--- a/Backoffice/Components/Liquidity/Wallets/WalletEditorDialog.razor
+++ b/Backoffice/Components/Liquidity/Wallets/WalletEditorDialog.razor
@@ -1,5 +1,4 @@
-﻿@using Service.Liquidity.Engine.Domain.Models.Wallets
-
+﻿@using Service.Liquidity.InternalWallets.Domain.Models
 <BaseTwoButtonsDialog 
     Caption="Wallet"
     OnClose="Close" 
