removed LE refs

--- a/Backoffice/Components/Prices/ExternalMarkets/ExternalMarketOrderBookComponent.razor
+++ b/Backoffice/Components/Prices/ExternalMarkets/ExternalMarketOrderBookComponent.razor
@@ -1,6 +1,4 @@
-﻿@using Service.Liquidity.Engine.Grpc
-@using Service.Liquidity.Engine.Grpc.Models
-@using MyJetWallet.Domain.ExternalMarketApi
+﻿@using MyJetWallet.Domain.ExternalMarketApi
 @using MyJetWallet.Domain.ExternalMarketApi.Dto
 
 @inject IOrderBookSource _orderBookManagerGrpc
