change bold text in asset portfolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -137,9 +137,9 @@
                     </td>
                 }
                 <td style="background: lightgray">
-                    <span><b>@Math.Round(netBalanceByAsset.Volume, 8)</b></span>
+                    <span>@Math.Round(netBalanceByAsset.Volume, 8)</span>
                     <br>
-                    <span>USD: @Math.Round(netBalanceByAsset.UsdVolume, 2)</span>
+                    <span><b>USD: @Math.Round(netBalanceByAsset.UsdVolume, 2)</b></span>
                     <br>
                     <span>Open Price Avg: @Math.Round(netBalanceByAsset.OpenPriceAvg, 2)</span>
                     <br>
